# my_little_scraper

./: .gitignore  CMakeLists.txt  README.md  csv_handler.h  csv_handler_definitions.cpp  main.cpp  scraper_definitions.cpp  scraping-handler.h
example-csv/: example.csv
wxFormsBuilder projects/Database Settings/: Database Settings.fbp
wxFormsBuilder projects/Keywords and urls/: keywirdsandurls.fbp
wxFormsBuilder projects/Run Panel/: Run Panel.fbp
